# OpenglEngine

./: CMakeLists.txt  README  run.sh
src/: CMakeLists.txt  app.h  camera.cpp  camera.h  ground.cpp  ground.h  header.h  light.cpp  light.h  main.cpp  model.cpp  model.h  particle.cpp  particle.h  scene.cpp  scene_line_triangle.cpp  skybox.cpp  skybox.h  sprite.cpp  sprite.h  util.cpp  util.h  utils.cpp  utils.h  vector3.cpp  vector3.h
